# purser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.plans/: README.md  purser_p2p_sync_plan.md  purser_v1_1_plan.md  purser_v4_plan.md  tech-stack.md
.plans/notes/: next-steps.md  oss-landscape-and-positioning-2026-07-14.md  purser-hook-ux.md
crates/purser/: Cargo.toml  README.md
crates/purser-core/: Cargo.toml
crates/purser-core/src/: lib.rs
crates/purser-daemon/: Cargo.toml
crates/purser-daemon/src/: lib.rs
crates/purser-mcp/: Cargo.toml
crates/purser-mcp/src/: lib.rs
crates/purser-repo-sync/: Cargo.toml
crates/purser-repo-sync/src/: lib.rs
crates/purser-store/: Cargo.toml
crates/purser-store/migrations/: 001_init.sql  002_project_paths.sql  003_manifest_sync.sql  004_device_uniqueness.sql  005_device_mesh.sql
crates/purser-store/src/: lib.rs
crates/purser-store/tests/: repository.rs
crates/purser-sync/: Cargo.toml
crates/purser-sync/src/: lib.rs
crates/purser-sync/tests/: iroh_transport.rs
crates/purser-vault/: Cargo.toml
crates/purser-vault/src/: lib.rs
crates/purser/src/: device_sync.rs  main.rs  project_sync.rs  secret_sync.rs
crates/purser/tests/: p2p_git.rs
npm/get-purser/: cli.js  package.json
npm/getpurser-purser/: package.json
