# Purser — one-command dev-environment sync with agent-blind secrets.
# Planning/design lives in the separate `futureos` repo (docs/plans/purser_v4_plan.md).

[workspace]
resolver = "2"
members = [
    "crates/purser",         # the `purser` binary/CLI — holds the crates.io name
    "crates/purser-core",    # identity (seam 1) + capabilities (seam 2) + shared types
    "crates/purser-store",   # SQLite migrations + repositories
    "crates/purser-vault",   # encryption at rest + OS keyring
    "crates/purser-sync",    # p2p transport (trait), device pairing, replication (seam 3)
    "crates/purser-daemon",  # resident process: injection, MCP, audit, sync loop
    "crates/purser-mcp",     # metadata-only MCP tools
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/purser-rs/purser"

# Internal crates share versions via path+version so the workspace stays consistent.
# External deps (tokio, iroh, rusqlite, keyring, chacha20poly1305, x25519-dalek,
# zeroize, rmcp, ulid, clap, notify) get added per-crate as each fills in.
# See the planning repo: docs/notes/tech-stack.md.
[workspace.dependencies]
purser-core = { path = "crates/purser-core", version = "0.0.1" }
purser-store = { path = "crates/purser-store", version = "0.0.1" }
purser-vault = { path = "crates/purser-vault", version = "0.0.1" }
purser-sync = { path = "crates/purser-sync", version = "0.0.1" }
purser-daemon = { path = "crates/purser-daemon", version = "0.0.1" }
purser-mcp = { path = "crates/purser-mcp", version = "0.0.1" }
