# Purser — one-command dev-environment sync with agent-blind secrets.
# Planning/design lives in the separate `futureos` repo (docs/plans/purser_v4_plan.md).

[workspace]
resolver = "2"
members = [
    "crates/purser",         # the `purser` binary/CLI — holds the crates.io name
    "crates/purser-core",    # identity (seam 1) + capabilities (seam 2) + shared types
    "crates/purser-store",   # SQLite migrations + repositories
    "crates/purser-vault",   # encryption at rest + OS keyring
    "crates/purser-sync",    # p2p transport (trait), device pairing, replication (seam 3)
    "crates/purser-repo-sync", # read-only Git upload-pack transport over authenticated iroh
    "crates/purser-daemon",  # resident process: injection, MCP, audit, sync loop
    "crates/purser-mcp",     # metadata-only MCP tools
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sapirowsky/purser"

# Internal crates share versions via path+version so the workspace stays consistent.
# External deps (tokio, iroh, rusqlite, keyring, chacha20poly1305, x25519-dalek,
# zeroize, rmcp, ulid, clap, notify) get added per-crate as each fills in.
# See the planning repo: docs/notes/tech-stack.md.
[workspace.dependencies]
purser-core = { path = "crates/purser-core", version = "0.2.0" }
purser-store = { path = "crates/purser-store", version = "0.2.0" }
purser-vault = { path = "crates/purser-vault", version = "0.2.0" }
purser-sync = { path = "crates/purser-sync", version = "0.2.0" }
purser-repo-sync = { path = "crates/purser-repo-sync", version = "0.2.0" }
purser-daemon = { path = "crates/purser-daemon", version = "0.2.0" }
purser-mcp = { path = "crates/purser-mcp", version = "0.2.0" }
anyhow = "1.0.100"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
hkdf = "0.12.4"
hmac = "0.12.1"
iroh = "=1.0.2"
keyring = { version = "3.6.3", features = ["windows-native", "apple-native"] }
rand = "0.8.5"
rpassword = "7.4.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
ulid = "1.2.1"
zeroize = "1.8.2"
