[package]
name = "purser-repo-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only Git upload-pack transport over authenticated Purser peers."

[dependencies]
anyhow = { workspace = true }
iroh = { workspace = true }
purser-store = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
