[package]
name = "purser-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Purser local store: SQLite migrations + repositories."

[dependencies]
purser-core = { workspace = true }
# rusqlite = { version = "0.31", features = ["bundled"] }   # add when wiring the DB
