[package]
name = "purser-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Purser local store: SQLite migrations + repositories."

[dependencies]
purser-core = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
