[package]
name = "purser-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Purser sync: peer-to-peer transport, device pairing, replication."

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
iroh = { workspace = true }
purser-core = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
