[package]
name = "purser-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Purser vault: encryption at rest + OS keyring integration."

[dependencies]
purser-core = { workspace = true }
chacha20poly1305 = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
