[package]
name = "purser"
default-run = "purser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "One-command dev-environment sync with agent-blind secrets."
readme = "README.md"
keywords = ["secrets", "sync", "cli", "devtools", "agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "purser"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
iroh = { workspace = true }
purser-store = { workspace = true }
purser-repo-sync = { workspace = true }
purser-sync = { workspace = true }
purser-vault = { workspace = true }
rpassword = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }

[[bin]]
name = "git-remote-purser"
path = "src/bin/git-remote-purser.rs"
